// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`shallow render 1`] = `
<div
  className="flex-100 layout-row layout-wrap layout-align-center-start footer"
>
  <div
    className="flex-20 flex-gt-sm-20 layout-row layout-wrap layout-align-center-center banner_text"
  >
    <div
      className="flex-100 flex-gt-sm-100 layout-align-center-center layout-row"
    >
      <h4
        className="flex-none"
      >
        Powered by
      </h4>
      <a
        className="layout-row flex-none layout-align-start-center"
        href="https://www.itsmycargo.com/"
        target="_blank"
      >
        <img
          alt=""
          className="flex-none pointy powered_by_logo"
          src="https://assets.itsmycargo.com/assets/logos/Logo_transparent_white.png"
        />
      </a>
    </div>
  </div>
  <div
    className="flex-25 flex-gt-sm-25 layout-row layout-wrap layout-align-start-start"
  >
    <div
      className="flex-25 layout-wrap layout-row"
    >
      <h4
        className="title"
      >
        Contact
      </h4>
    </div>
    <div
      className="flex-100 layout-row layout-wrap contacts"
    >
      <a
        className="pointy flex-100 layout-row layout-align-start-center"
        href="mailto:support@demo.com"
      >
        <i
          aria-hidden="true"
          className="fa fa-envelope"
        />
        support@demo.com
      </a>
      <div
        className="flex-100 layout-row layout-align-start-center"
      >
        <i
          aria-hidden="true"
          className="fa fa-phone"
        />
      </div>
      <div
        className="flex-100 layout-row social_links"
      />
    </div>
  </div>
  <div
    className="flex-25 flex-gt-sm-25 layout-row layout-wrap layout-align-start-start"
  >
    <div
      className="flex-100 layout-wrap layout-row"
    >
      <h4
        className="title"
      >
        Company
      </h4>
    </div>
    <ul>
      <li>
        <a
          href="https://www.itsmycargo.com/en/"
          target="_blank"
        >
          About Us
        </a>
      </li>
      <li>
        <a
          href="https://www.itsmycargo.com/en/contact"
          target="_blank"
        >
          Imprint
        </a>
      </li>
      <li>
        <a
          href="/terms_and_conditions"
          target="_blank"
        >
          Terms and Conditions
        </a>
      </li>
      <li>
        <a
          href="https://itsmycargo.com/en/privacy"
          target="_blank"
        >
          Privacy Policy
        </a>
      </li>
    </ul>
  </div>
  <div
    className=" flex-50 flex-gt-sm-20 flex-order--4 flex-order-gt-sm-4 layout-row layout-wrap layout-align-start-start "
  >
    <div
      className="flex-100 layout-row layout-align-start"
    >
      <SquareButton
        active={true}
        back={false}
        border={false}
        classNames=""
        disabled={false}
        handleDisabled={null}
        handleNext={null}
        icon=""
        iconClass=""
        size="small"
        text="Find Rates"
        theme={
          Object {
            "colors": Object {
              "primary": "#333",
              "secondary": "#fafafa",
            },
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`theme is falsy 1`] = `
<div
  className="flex-100 layout-row layout-wrap layout-align-center-start footer"
>
  <div
    className="flex-20 flex-gt-sm-20 layout-row layout-wrap layout-align-center-center banner_text"
  >
    <div
      className="flex-100 flex-gt-sm-100 layout-align-center-center layout-row"
    >
      <h4
        className="flex-none"
      >
        Powered by
      </h4>
      <a
        className="layout-row flex-none layout-align-start-center"
        href="https://www.itsmycargo.com/"
        target="_blank"
      >
        <img
          alt=""
          className="flex-none pointy powered_by_logo"
          src="https://assets.itsmycargo.com/assets/logos/Logo_transparent_white.png"
        />
      </a>
    </div>
  </div>
  <div
    className="flex-25 flex-gt-sm-25 layout-row layout-wrap layout-align-start-start"
  >
    <div
      className="flex-25 layout-wrap layout-row"
    >
      <h4
        className="title"
      >
        Contact
      </h4>
    </div>
    <div
      className="flex-100 layout-row layout-wrap contacts"
    >
      <a
        className="pointy flex-100 layout-row layout-align-start-center"
        href="mailto:support@demo.com"
      >
        <i
          aria-hidden="true"
          className="fa fa-envelope"
        />
        support@demo.com
      </a>
      <div
        className="flex-100 layout-row layout-align-start-center"
      >
        <i
          aria-hidden="true"
          className="fa fa-phone"
        />
      </div>
      <div
        className="flex-100 layout-row social_links"
      />
    </div>
  </div>
  <div
    className="flex-25 flex-gt-sm-25 layout-row layout-wrap layout-align-start-start"
  >
    <div
      className="flex-100 layout-wrap layout-row"
    >
      <h4
        className="title"
      >
        Company
      </h4>
    </div>
    <ul>
      <li>
        <a
          href="https://www.itsmycargo.com/en/"
          target="_blank"
        >
          About Us
        </a>
      </li>
      <li>
        <a
          href="https://www.itsmycargo.com/en/contact"
          target="_blank"
        >
          Imprint
        </a>
      </li>
      <li>
        <a
          href="/terms_and_conditions"
          target="_blank"
        >
          Terms and Conditions
        </a>
      </li>
      <li>
        <a
          href="https://itsmycargo.com/en/privacy"
          target="_blank"
        >
          Privacy Policy
        </a>
      </li>
    </ul>
  </div>
  <div
    className=" flex-50 flex-gt-sm-20 flex-order--4 flex-order-gt-sm-4 layout-row layout-wrap layout-align-start-start "
  >
    <div
      className="flex-100 layout-row layout-align-start"
    >
      <SquareButton
        active={true}
        back={false}
        border={false}
        classNames=""
        disabled={false}
        handleDisabled={null}
        handleNext={null}
        icon=""
        iconClass=""
        size="small"
        text="Find Rates"
        theme={null}
      />
    </div>
  </div>
</div>
`;
